# OpenGLSetup

./: .gitignore  OpenGLSetupSolution.sln  README.md
OpenGLSetup/: OpenGLSetup.vcxproj  OpenGLSetup.vcxproj.filters  main.cpp  oldmain.cpp
OpenGLSetup/dep/include/glad/: glad.h
OpenGLSetup/src/: CMakeLists.txt  glad.c  main.cpp
OpenGLSetup/src/utils/: input.cpp  input.h  shader.cpp  shader.h  window.cpp  window.h
OpenGLSetup/x64/Debug/: OpenGLSetup.exe.recipe  vc143.idb
OpenGLSetup/x64/Debug/OpenGLSetup.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLSetup.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
